--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://mp-3-six-pink.vercel.app/",
+  "homepage": "https://mp-3-six-pink.vercel.app",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
